
syntax = "proto3";

option csharp_namespace = "Frontend.Console.Protos";

import "google/protobuf/Empty.proto";

service CarService {
	rpc GetAll(google.protobuf.Empty) returns (GetAllReply);
}

message GetAllRequest {

}
message GetAllReply {
	repeated CarDto cars = 1;
}
message CarDto {
	reserved 3;
	
	string make = 1;
	string model = 2;
	int32 kilometers = 4;


}
